Refactor Docker files
Updates the internal tooling. Does not change much from the outside.